# parallel_rdkit

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build_output.txt  build_output2.txt  pixi.toml  pyproject.toml  recipe.yaml
.github/workflows/: build.yml
benchmarks/: benchmark_msready.py  benchmark_similarity_matrix.py  benchmark_smarts.py
parallel_rdkit/: __init__.py
src/: CMakeLists.txt  README.md  binding.cpp  fingerprint.py  mol.cpp  mol.hpp  mol.py  pyproject.toml  screen_smarts.cpp  screen_smarts.hpp
src/parallel_rdkit/: __init__.py  fingerprint.py  matrix_similarity.py  matrix_tanimoto.py  mol.py  screen_smarts.py
tests/: conftest.py  test_fingerprint.py  test_matrix_similarity.py  test_msready_full.py  test_parallel.py  test_screen_smarts.py
