[build-system]
requires = ["scikit-build-core", "nanobind", "cmake", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "parallel_rdkit"
version = "0.4.0"
authors = [{name = "Nir"}]
description = "Parallel RDKit utilities"
dependencies = [
    "rdkit",
    "polars",
    "pyarrow",
    "pytest",
    "numpy",
    "pandas",
    "tqdm",
]

[tool.scikit-build]
wheel.py-api = "cp38"
wheel.packages = ["src/parallel_rdkit"]
cmake.args = [
    "-DPython_FIND_STRATEGY=LOCATION",
    "-DPython_FIND_REGISTRY=NEVER",
    "-DPython_FIND_FRAMEWORK=NEVER",
]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"

[tool.scikit-build.ninja]
make-fallback = false
